--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/sweetalert/dist/sweetalert.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/sweetalert/dist/sweetalert.min.js",
+              "./node_modules/deepstream.io-client-js/dist/deepstream.js"
             ]
           },
           "configurations": {
