--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "angularfire2": "^5.1.1",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "deepstream": "0.0.0",
+    "deepstream.io-client-js": "^2.3.0",
     "firebase": "^5.8.2",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "sweetalert": "^2.1.2",
     "uuid": "^3.3.2",
