--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~7.0.0",
     "angularfire2": "^5.1.1",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "deepstream": "0.0.0",
     "deepstream.io-client-js": "^2.3.0",
