--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deepstream.io-client-js": "^2.3.0",
     "firebase": "^5.8.2",
     "hammerjs": "^2.0.8",
+    "howler": "^2.1.2",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "sweetalert": "^2.1.2",
