--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "howler": "^2.1.2",
     "jquery": "^3.3.1",
+    "pivottable": "^2.23.0",
     "rxjs": "~6.3.3",
     "sweetalert": "^2.1.2",
     "uuid": "^3.3.2",
