--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "hammerjs": "^2.0.8",
     "howler": "^2.1.2",
     "jquery": "^3.3.1",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-pagination": "^4.1.0",
     "pivottable": "^2.23.0",
     "rxjs": "~6.3.3",
     "sweetalert": "^2.1.2",
